@@ -275,4 +275,7 @@ Contributions
   Igor Mokrushin <igor@avtomir.ru>
     Software stereo volume control for aRts
 
+  Roberto Togni <rtogni@bresciaonline.it>
+    RPZA video decoder
+
     (let us know if we've forgotten anyone)
