@@ -10,6 +10,7 @@ xine-lib (next version) [someone fill in stability and urgency]
   * Sun/NeXT SND/AU file demuxer
   * Id CIN video decoder
   * QT SMC video decoder
+  * QT RPZA video decoder
   * time-based seeking in ogg-streams
   * improved support for ogg-streams containing video (so-called ogm streams)
   * spu encoding for full overlay support with dxr3
